; ModuleID = '/home/carl/AnghaBench/libgit2/tests/submodule/extr_lookup.c_test_submodule_lookup__simple_lookup.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/submodule/extr_lookup.c_test_submodule_lookup__simple_lookup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [13 x i8] c"sm_unchanged\00", align 1
@.str.1 = private unnamed_addr constant [24 x i8] c"sm_added_and_uncommited\00", align 1
@.str.2 = private unnamed_addr constant [19 x i8] c"sm_gitmodules_only\00", align 1
@.str.3 = private unnamed_addr constant [14 x i8] c"not-submodule\00", align 1
@GIT_EEXISTS = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [11 x i8] c"just_a_dir\00", align 1
@GIT_ENOTFOUND = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [12 x i8] c"just_a_file\00", align 1
@.str.6 = private unnamed_addr constant [13 x i8] c"no_such_file\00", align 1
@.str.7 = private unnamed_addr constant [25 x i8] c"sm_added_and_uncommited/\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_submodule_lookup__simple_lookup() #0 {
  %1 = load i32, i32* @g_repo, align 4
  %2 = call i32 @assert_submodule_exists(i32 %1, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  %3 = load i32, i32* @g_repo, align 4
  %4 = call i32 @assert_submodule_exists(i32 %3, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.1, i64 0, i64 0))
  %5 = load i32, i32* @g_repo, align 4
  %6 = call i32 @assert_submodule_exists(i32 %5, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.2, i64 0, i64 0))
  %7 = load i32, i32* @g_repo, align 4
  %8 = load i32, i32* @GIT_EEXISTS, align 4
  %9 = call i32 @refute_submodule_exists(i32 %7, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.3, i64 0, i64 0), i32 %8)
  %10 = load i32, i32* @g_repo, align 4
  %11 = load i32, i32* @GIT_ENOTFOUND, align 4
  %12 = call i32 @refute_submodule_exists(i32 %10, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.4, i64 0, i64 0), i32 %11)
  %13 = load i32, i32* @g_repo, align 4
  %14 = load i32, i32* @GIT_ENOTFOUND, align 4
  %15 = call i32 @refute_submodule_exists(i32 %13, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.5, i64 0, i64 0), i32 %14)
  %16 = load i32, i32* @g_repo, align 4
  %17 = load i32, i32* @GIT_ENOTFOUND, align 4
  %18 = call i32 @refute_submodule_exists(i32 %16, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.6, i64 0, i64 0), i32 %17)
  %19 = load i32, i32* @g_repo, align 4
  %20 = call i32 @assert_submodule_exists(i32 %19, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.7, i64 0, i64 0))
  ret void
}

declare dso_local i32 @assert_submodule_exists(i32, i8*) #1

declare dso_local i32 @refute_submodule_exists(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
